# mupdf-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Cross.toml  README.md  lsan_suppressions.txt
.github/workflows/: CI.yml  Cross.yml  android.Dockerfile  publish.yml
compact_cstr/: Cargo.toml
compact_cstr/src/: error.rs  lib.rs  repr.rs  string.rs  tests.rs  vector.rs
compact_cstr/tests/: proptest.rs
examples/: extract_images.rs  extract_stext.rs  extract_text.rs  list_annotations.rs  shape_demo.rs
mupdf-fonts-droid/: Cargo.toml
mupdf-fonts-droid/src/: lib.rs
mupdf-fonts-noto/: Cargo.toml
mupdf-fonts-noto/src/: lib.rs
mupdf-fonts-sil/: Cargo.toml
mupdf-fonts-sil/fonts/: CharisSIL-Bold.cff  CharisSIL-BoldItalic.cff  CharisSIL-Italic.cff  CharisSIL.cff
mupdf-fonts-sil/src/: lib.rs
mupdf-sys/: Cargo.toml  androidfonts.c  build.rs  docs.rs  make.rs  msbuild.rs  wrapper.c  wrapper.h
mupdf-sys/src/: lib.rs
mupdf-sys/wrapper/: bitmap.c  buffer.c  colorspace.c  context.c  device.c  display_list.c  document.c  error.c  font.c  image.c  internal.h  page.c  path.c  pdf_annot.c  pdf_document.c  pdf_object.c  pdf_page.c  pixmap.c  rect.c  text.c  writer.c
src/: array.rs  bitmap.rs  buffer.rs  bundled_font.rs  color.rs  color_params.rs  color_space.rs  colorspace.rs  context.rs  cookie.rs  destination.rs  device.rs  display_list.rs  display_list_device.rs  document.rs  document_writer.rs  draw_device.rs  drawing.rs  error.rs  file_path.rs  font.rs  font_loader.rs  glyph.rs  image.rs  lib.rs  link.rs  matrix.rs  outline.rs  output.rs  page.rs  path.rs  pdf_annotation.rs  pdf_graft_map.rs  pdf_object.rs  pdf_page.rs  pixmap.rs  point.rs  quad.rs  rect.rs  separations.rs  (+6 more)
src/device/: custom.rs  native.rs
src/pdf/: annotation.rs  document.rs  filter.rs  graft_map.rs  intent.rs  mod.rs  object.rs  page.rs  tests_annotation.rs  widget.rs
src/pdf/links/: build.rs  extraction.rs  link_annot.rs  mod.rs  tests_build.rs  tests_extraction.rs  tests_format.rs  tests_link_annot.rs
src/pdf/shape/: drawing.rs  finish.rs  mod.rs  operators.rs  options.rs  text.rs
src/shape/: drawing.rs  finish.rs  mod.rs  operators.rs  options.rs  text.rs
tests/: drawings.rs  shape.rs  test_filters.rs  test_issue_16.rs  test_issues.rs  test_pdf_object.rs
tests/files/: dummy.html
tests/shape/: arc_curve_primitives.rs  basic_drawing.rs  custom_fonts.rs  insert_text.rs  justify_alignment.rs  kitchen_sink.rs  m1_red_rect.rs  m2_shape_commit.rs  m3_arc_curve_primitives.rs  m4_insert_text.rs  main.rs  opacity_extgstate.rs  red_rect.rs  shape_commit.rs  support.rs  test_kitchen_sink.rs
