[package]
name = "mupdf"
version = "0.4.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
description = "Safe Rust wrapper to MuPDF"
keywords = ["pdf", "mupdf"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/messense/mupdf-rs"

[features]
default = ["js", "xps", "svg", "cbz", "img", "html", "epub", "system-fonts", "tesseract"]
# Use system libs for all thirdparty libs
sys-lib = ["mupdf-sys/sys-lib"]
# Use system freetype
sys-lib-freetype = ["mupdf-sys/sys-lib-freetype"]
# Use system gumbo parser
sys-lib-gumbo = ["mupdf-sys/sys-lib-gumbo"]
# Use system harfbuzz
sys-lib-harfbuzz = ["mupdf-sys/sys-lib-harfbuzz"]
# Use system jbig2dec
sys-lib-jbig2dec = ["mupdf-sys/sys-lib-jbig2dec"]
# Use system libjpeg
sys-lib-libjpeg = ["mupdf-sys/sys-lib-libjpeg"]
# Use system openjpeg
sys-lib-openjpeg = ["mupdf-sys/sys-lib-openjpeg"]
# Use system zlib
sys-lib-zlib = ["mupdf-sys/sys-lib-zlib"]
# Use system leptonica
sys-lib-leptonica = ["mupdf-sys/sys-lib-leptonica"]
# Use system tesseract
sys-lib-tesseract = ["mupdf-sys/sys-lib-tesseract"]
tesseract = ["mupdf-sys/tesseract"]
js = ["mupdf-sys/js"]
xps = ["mupdf-sys/xps"]
svg = ["mupdf-sys/svg"]
cbz = ["mupdf-sys/cbz"]
img = ["mupdf-sys/img"]
html = ["mupdf-sys/html"]
epub = ["mupdf-sys/epub"]
all-fonts = ["mupdf-sys/all-fonts"]
system-fonts = ["font-kit"]

[dependencies]
mupdf-sys = { version = "0.4.0", path = "mupdf-sys" }
once_cell = "1.3.1"
num_enum = "0.5.1"
bitflags = "1.2.1"

[dependencies.font-kit]
version = "0.11.0"
optional = true

[workspace]
members = [
    ".",
    "mupdf-sys"
]

[dev-dependencies]
crossbeam-utils = "0.8.1"
