[package]
name = "mupdf-sys"
version = "0.1.3"
authors = ["messense <messense@icloud.com>"]
edition = "2018"
exclude = [
    "mupdf/resources/fonts/droid/*",
    "mupdf/resources/fonts/han/*",
    "mupdf/resources/fonts/noto/*",
    "mupdf/resources/fonts/sil/*",
    "mupdf/resources/fonts/urw/input/*",
    "mupdf/docs/*",
    "mupdf/generated/*",
    "mupdf/platform/gl/*",
    "mupdf/platform/java/*",
    "mupdf/platform/wasm/*",
    "mupdf/platform/x11/*",
    "mupdf/thirdparty/curl/*",
    "mupdf/thirdparty/freeglut/*",
    "mupdf/thirdparty/lcms2/doc/*",
    "mupdf/thirdparty/lcms2/testbed/*",
    "mupdf/thirdparty/lcms2/plugins/*",
    "mupdf/thirdparty/freetype/docs/*",
    "mupdf/thirdparty/libjpeg/testimg*",
    "mupdf/thirdparty/openjpeg/doc/*",
    "mupdf/thirdparty/harfbuzz/docs/*",
    "mupdf/thirdparty/harfbuzz/test/*",
    "mupdf/thirdparty/mujs/docs/*",
    "mupdf/thirdparty/zlib/doc/*",
    "mupdf/thirdparty/zlib/test/*",
    "mupdf/thirdparty/zlib/contrib/*",
    "mupdf/thirdparty/zlib/examples/*",
    "mupdf/thirdparty/gumbo-parser/test/*",
    "mupdf/thirdparty/gumbo-parser/python/*",
    "mupdf/thirdparty/gumbo-parser/benchmarks/*",
]
description = "Rust FFI binding to MuPDF"
keywords = ["pdf", "mupdf"]
license = "GPL-3.0"
links="mupdf-wrapper"
repository = "https://github.com/messense/mupdf-rs"

[features]
# Use system libs for all thirdparty libs
sys-lib = []
# Use system freetype
sys-lib-freetype = []
# Use system gumbo parser
sys-lib-gumbo = []
# Use system harfbuzz
sys-lib-harfbuzz = []
# Use system jbig2dec
sys-lib-jbig2dec = []
# Use system libjpeg
sys-lib-libjpeg = []
# Use system openjpeg
sys-lib-openjpeg = []
# Use system zlib
sys-lib-zlib = []
# Use system leptonica
sys-lib-leptonica = []
# Use system tesseract
sys-lib-tesseract = []
js = []
xps = []
svg = []
cbz = []
img = []
html = []
epub = []

[build-dependencies]
bindgen = "0.58"
cc = "1.0.50"
pkg-config = "0.3"

[dependencies]
