[package]
name = "mupdf-sys"
version = "0.4.4"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
exclude = [
    "mupdf/resources/cmaps/*",
    "mupdf/resources/icc/*",
    "mupdf/resources/fonts/droid/*",
    "mupdf/resources/fonts/han/*",
    "mupdf/resources/fonts/noto/*",
    "mupdf/resources/fonts/sil/*",
    "mupdf/resources/fonts/urw/input/*",
    "mupdf/docs/*",
    "mupdf/generated/*",
    "mupdf/platform/gl/*",
    "mupdf/platform/java/*",
    "mupdf/platform/wasm/*",
    "mupdf/platform/x11/*",
    "mupdf/thirdparty/curl/*",
    "mupdf/thirdparty/freeglut/*",
    "mupdf/thirdparty/lcms2/doc/*",
    "mupdf/thirdparty/lcms2/testbed/*",
    "mupdf/thirdparty/lcms2/plugins/*",
    "mupdf/thirdparty/freetype/docs/*",
    "mupdf/thirdparty/freetype/ChangeLog*",
    "mupdf/thirdparty/libjpeg/testimg*",
    "mupdf/thirdparty/openjpeg/doc/*",
    "mupdf/thirdparty/harfbuzz/docs/*",
    "mupdf/thirdparty/harfbuzz/test/*",
    "mupdf/thirdparty/harfbuzz/meson-cc-tests/*",
    "mupdf/thirdparty/harfbuzz/perf/*",
    "mupdf/thirdparty/mujs/docs/*",
    "mupdf/thirdparty/zlib/doc/*",
    "mupdf/thirdparty/zlib/test/*",
    "mupdf/thirdparty/zlib/contrib/*",
    "mupdf/thirdparty/zlib/examples/*",
    "mupdf/thirdparty/gumbo-parser/examples/*",
    "mupdf/thirdparty/gumbo-parser/tests/*",
    "mupdf/thirdparty/gumbo-parser/python/*",
    "mupdf/thirdparty/gumbo-parser/benchmarks/*",
    "mupdf/thirdparty/leptonica/prog/*",
    "mupdf/thirdparty/leptonica/version-notes.html",
    "mupdf/thirdparty/extract/test/*",
    "mupdf/thirdparty/tesseract/abseil/*",
    "mupdf/thirdparty/tesseract/unittest/*",
    "mupdf/thirdparty/tesseract/googletest/*",
    "mupdf/thirdparty/tesseract/test/*",
    "mupdf/thirdparty/tesseract/java/*",
    "mupdf/thirdparty/tesseract/doc/*",
]
description = "Rust FFI binding to MuPDF"
keywords = ["pdf", "mupdf"]
license = "AGPL-3.0"
links="mupdf-wrapper"
repository = "https://github.com/messense/mupdf-rs"

[features]
# Use system libs for all thirdparty libs
sys-lib = []
# Use system freetype
sys-lib-freetype = []
# Use system gumbo parser
sys-lib-gumbo = []
# Use system harfbuzz
sys-lib-harfbuzz = []
# Use system jbig2dec
sys-lib-jbig2dec = []
# Use system libjpeg
sys-lib-libjpeg = []
# Use system openjpeg
sys-lib-openjpeg = []
# Use system zlib
sys-lib-zlib = []
# Use system leptonica
sys-lib-leptonica = []
# Use system tesseract
sys-lib-tesseract = []
all-fonts = []
js = []
xps = []
svg = []
cbz = []
img = []
html = []
epub = []
tesseract = []

[build-dependencies]
bindgen = { version = "0.71", default-features = false, features = ["runtime"] }
cc = "1.0.50"
pkg-config = "0.3"
regex = "1.11"

[dependencies]
zerocopy = { version = "0.8.17", features = ["derive"] }
